# incident-commander-ai

./: README.md  RELATABLE.md  docker-compose.yml  produce_kafka_tests.py  test_alert_rest.sh
ai-analytics-service/: .dockerignore  .env  .env.example  .gitignore  AI_ANALYTICS_SERVICE.md  Dockerfile  README.md  context.md  migrate_json_to_redis.py  pyproject.toml  requirements.txt
ai-analytics-service/ai_analytics_service.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
ai-analytics-service/app/: __init__.py  main.py  main_state.py
ai-analytics-service/app/api/routes/: analysis.py
ai-analytics-service/app/core/: __init__.py  config.py  errors.py  logging.py
ai-analytics-service/app/db/: __init__.py  json_repository.py  redis_repository.py  repository.py  session.py
ai-analytics-service/app/kafka/: __init__.py  consumer.py
ai-analytics-service/app/models/: __init__.py  database.py  enums.py  schemas.py
ai-analytics-service/app/prompts/: root_cause_prompt.py
ai-analytics-service/app/redis/: __init__.py  publisher.py
ai-analytics-service/app/services/: __init__.py  analysis_service.py  llm_service.py
ai-analytics-service/scripts/: mock_kafka_producer.py  ping_llm.py  process_mock_trace.py  setup.ps1  test_llm_response.py
ai-analytics-service/tests/: test_api_routes.py  test_contract_models.py  test_json_repository.py  test_llm_service.py  test_prompt.py
alert-service/: Dockerfile  pom.xml
bff-service/: pom.xml
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts
order-simulator/: pom.xml
trace-service/: deps.txt  pom.xml
(+131 files in other folders)
