[project]
name = "ai-analytics-service"
version = "0.1.0"
description = "FastAPI AI analysis service for Incident Commander AI"
requires-python = ">=3.9"
dependencies = [
    "aiokafka==0.12.0",
    "asyncpg==0.31.0",
    "fastapi==0.115.6",
    "httpx==0.28.1",
    "pydantic==2.13.4",
    "pydantic-settings==2.7.0",
    "redis==5.2.1",
    "SQLAlchemy==2.0.50",
    "structlog==24.4.0",
    "uvicorn[standard]==0.34.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.25.0",
    "ruff==0.8.4",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
